--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -12,7 +12,7 @@ body {
 }
 
 h2, h3, h4, h5, h6,
-.h2, .h3, .h4, .h5, .h6{
+.h2, .h3, .h4, .h5, .h6 {
     font-family: Continuum, sans-serif;
 }
 
@@ -20,7 +20,7 @@ h2, h3, h4, h5, h6,
     text-transform: lowercase;
 }
 
-.btn{
+.btn {
     border-radius: 0;
 }
 
@@ -38,15 +38,41 @@ h1.display-4 {
     border: none;
 }
 
-.breadcrumb{
+.breadcrumb {
     background: none;
     font-size: .75em;
     padding-left: 0;
 
 }
 
-@media(min-width: 992px){
-    header.jumbotron h1{
+/* Or apply it via media query */
+@media (prefers-color-scheme: dark) {
+    body {
+        background: #300a24;
+        color: #fff;
+    }
+
+    .navbar.navbar-light.bg-white {
+        background: #300a24 !important;
+    }
+
+    .navbar-light .navbar-brand,
+    .navbar-light .navbar-nav .nav-link {
+        color: rgba(255, 255, 255, 0.75);
+    }
+
+    .navbar-light .navbar-brand:hover,
+    .navbar-light .navbar-nav .nav-link:hover {
+        color: #fff;
+    }
+
+    .card {
+        background: #300a24;
+    }
+}
+
+@media (min-width: 992px) {
+    header.jumbotron h1 {
         font-size: 6em;
     }
 }
