--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -60,7 +60,7 @@
 }
 
 .stack-icon {
-    width: 24%;
+    width: 23.99%;
     background: white;
     margin-bottom: .25em;
     border-radius: 100%;
@@ -129,12 +129,12 @@ h2, h3, h4, h5, h6 {
 main {
     background-color: rgba(57, 11, 70, .9);
     color: white;
-    padding-top: 76px;
+    padding: 76px 0 1em;
 }
 
 body > footer {
     color: white;
-    padding: 2em 30%;
+    padding: 2em 0;
 }
 
 .card.card-portfolio {
@@ -152,14 +152,17 @@ body > footer {
     color: #21002a;
 }
 
+.nav-social{
+    font-size: 2.5em;
+}
+
 @media (min-width: 960px) {
     body {
         font-size: 20px;
     }
 
     main {
-        padding-top: 81px;
-        padding-bottom: 2em;
+        padding: 81px 0 2em;
     }
 
     section.block {
@@ -167,7 +170,7 @@ body > footer {
     }
 
     body > footer {
-        padding-top: 4em;
+        padding: 4em 30% 2em;
     }
 
     .jumbotron {
@@ -230,4 +233,9 @@ body > footer {
     .stack-icon {
         width: 15%;
     }
+
+    .nav-social{
+        font-size: 2em;
+    }
+
 }
